--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/010/158/131/original/house-symbol-home-icon-sign-design-free-png.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>RS ESTATE</title>
   </head>
   <body>
     <div id="root"></div>
